--- a/src/components/Navbar.css
+++ b/src/components/Navbar.css
@@ -72,3 +72,13 @@ button:hover {
     background-color: #ff6905;
     color: #ffffff;
 }
+
+.nev-logo {
+    display: inline-block;
+    padding-top: 0.3125rem;
+    padding-bottom: 0.3125rem;
+    margin-right: 1rem;
+    font-size: 1.25rem;
+    line-height: inhertit;
+    white-space: nowrap;
+}
